--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,3 +20,18 @@
   height: 50%;
   border: 1px solid black;
 }
+.container .box {
+  display: flex;
+  justify-content: center;
+}
+.container .box table {
+  width: 50%;
+  margin-top: 25px;
+  border: 1px solid black;
+}
+.container .box table th {
+  border: 1px solid black;
+}
+.container .box table td {
+  text-align: center;
+}
