--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,4 +19,19 @@
     height: 50%;
     border: 1px solid black;
   }
+  .box {
+    display: flex;
+    justify-content: center;
+    table {
+      width: 50%;
+      margin-top: 25px;
+      border: 1px solid black;
+      th {
+        border: 1px solid black;
+      }
+      td {
+        text-align: center;
+      }
+    }
+  }
 }
